# cuda-demo

./: .clang-format  CMakeLists.txt
exercise/ch3/: CMakeLists.txt  task1.cu  task2.cu
exercise/ch7/include/: common.cuh  timer.cuh
exercise/ch7/src/: conv_cpu.cu  conv_tiled.cu
key_kernel/cnn/: CMakeLists.txt
key_kernel/cnn/include/: cnn.cuh  common.cuh
key_kernel/cnn/src/: cnn_native.cu  cnn_unroll.cu  cpu_cnn.cu  cudnn_cnn.cu  main.cu
key_kernel/convolution/: CMakeLists.txt
key_kernel/convolution/include/: conv.cuh
key_kernel/convolution/src/: conv_constant.cu  conv_native.cu  main.cu  utils.cu
key_kernel/histogram/: CMakeLists.txt
key_kernel/histogram/include/: histogram.cuh
key_kernel/histogram/src/: coarsened_histogram.cu  cpu_histogram.cu  main.cu  native_histogram.cu  registered_histogram.cu  shared_histogram.cu
key_kernel/reduction/: CMakeLists.txt
key_kernel/reduction/include/: reduction.cuh
key_kernel/reduction/src/: coarsened_reduction.cu  cpu_reduction.cu  main.cu  native_reduction.cu  shared_reduction.cu
key_kernel/stencil/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md
key_kernel/stencil/include/: common.cuh  stencil.cuh
key_kernel/stencil/src/: coarsened_stencil.cu  cpu_stencil.cpp  cpu_stencil.cu  main.cu  naive_stencil.cu  native_stencil.cu  native_stencul.cu  shared_stencil.cu
leetCuda/: CMakeLists.txt  matrix_multiply_compare.cu
